--- a/main.css
+++ b/main.css
@@ -96,7 +96,7 @@ body {
 			'tenth'
 			'eleventh'
 			'link';
-		grid-template-rows: 1.5fr 3fr 3fr 3fr 3fr 3fr;
+		grid-template-rows: 1.5fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr;
 		grid-template-columns: 1fr;
 		grid-row-gap: 1vh;
 	}
