--- a/main.css
+++ b/main.css
@@ -162,6 +162,17 @@ body {
 	.headerContact {
 		display: none;
 	}
+	
+	.mobileOnlyLink {
+		font-family: neue-haas-unica, sans-serif;
+		font-size: 1.25em;
+		font-weight: 300;
+		color: #1F386D;
+	}
+}
+
+.mobileOnlyLink {
+	display: none;
 }
 
 .tile {
