--- a/main.css
+++ b/main.css
@@ -528,7 +528,7 @@ body {
 	grid-area: image;
 	width: 100%;
 	height: 100%;
-	background-image: url(img/headshot.jpeg);
+	background-image: url(img/headshot.jpg);
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: left;
