--- a/main 2.css
+++ b/main 2.css
@@ -127,6 +127,7 @@ a {
 @media (max-width: 700px) {
 	.label {
 		font-size: 3em;
+		margin-top: 8vh;
 	}
 
 	#portfolio_container {
@@ -426,4 +427,67 @@ a {
 	width: 100%;
 	position: relative;
 	overflow: hidden;
+}
+
+
+@media (max-width: 700px) {
+	#post_container {
+		grid-template-columns: 1fr 1fr 0fr 0fr;
+	}
+
+	.large_image {
+		grid-column: 1 / 3;
+	}
+
+	.medium_image {
+		grid-column: 1 / 3;
+	}
+
+	.small_image_left {
+		grid-column: 1 / 2;
+	}
+
+	.small_image_left {
+		grid-column: 2 / 3;
+	}
+
+	.medium_image_caption {
+		grid-column: 1 / 3;
+	}
+
+	.small_image_caption {
+		grid-column: 1 / 3;
+	}
+
+	.medium_video {
+		grid-column: 1 / 3;
+	}
+
+	.inkedin_phone_container {
+		grid-column: 1 / 3;
+	}
+
+	.dunkin_phone_container {
+		grid-column: 1 / 3;
+	}
+
+	.phone_image {
+		grid-column: 1 / 2;
+	}
+
+	.next_to_phone_image {
+		grid-column: 2 / 3;
+	}
+
+	.info_header {
+		grid-column: 1 / 2;
+	}
+
+	.info_p {
+		grid-column: 2 / 3;
+	}
+
+	#work {
+		display: none;
+	}
 }
