Password form should work now

--- a/main 2.css
+++ b/main 2.css
@@ -440,6 +440,65 @@ a {
 	position: relative;
 }
 
+#password_container {
+	position: absolute;
+	top: 45vh;
+	height: 6vw;
+	width: 75vw;
+	left: 12.5vw;
+}
+
+/* #20386D */
+
+#password_form {
+	position: absolute;
+	width: 67.5vw;
+	height: 100%;
+	border: 0;
+  outline: 0;
+  background: transparent;
+	padding: 0;
+	margin: 0;
+  border-bottom: 2px solid white;
+	font-size: 3em;
+	color: white;
+	top: 0;
+	margin-bottom: 10%;
+}
+
+#password_button {
+	position: absolute;
+	color: #20386D;
+	right: 0;
+	width: 6vw;
+	height: 6vw;
+	padding: 0;
+	top: 0;
+	border: none;
+	/* border-bottom: 2px solid white; */
+	background-color: white;
+	font-family: 'Inter', sans-serif;
+	font-size: 3em;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: white;
+	opacity: .6;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: white;
+	opacity: .6;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: white;
+	opacity: .6;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: white;
+	opacity: .6;
+}
+
+
 
 /* ************************* */
 /* SPECIFIC PHONE CONTAINERS */
